src/styles/features/time.css
#time {
	position: relative;
}

#time:before {
	box-shadow: 0px 0px 100px 40px rgba(34, 34, 34, 0.2666666667);
}

#time.hidden {
	display: none;
}

#time.seconds #digital-mm-separator,
#time.seconds #digital-ss {
	display: inline;
}

#time.seconds #analog-seconds {
	display: block;
}

#time.analog #digital {
	display: none;
}

#time.analog #analog {
	display: inline-block;
}

#digital {
	margin: 0;
	margin-bottom: 0.1em;
	font-size: calc(var(--clock-size) * 6);
	line-height: 1em;
	font-weight: 200;
	font-weight: var(--font-weight-clock);
}

#digital.zero #digital-hh-leading-zero {
	display: inline;
}

#digital-hh-leading-zero,
#digital-mm-separator,
#digital-ss {
	display: none;
}

#analog {
	display: none;
	position: relative;
	width: calc(var(--clock-size) * 8);
	height: calc(var(--clock-size) * 8);
	border-radius: 100%;
	border: calc(var(--clock-size) * 0.2) solid white;
	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
	background-color: rgba(255, 255, 255, 0.2);
	backdrop-filter: blur(1em);
	-webkit-backdrop-filter: blur(1em);
}

#analog.transparent {
	box-shadow: none;
	backdrop-filter: none;
	-webkit-backdrop-filter: none;
	border-color: transparent;
	background-color: transparent;
}

#analog.square {
	border-radius: calc(var(--clock-size) * 0.2);
}

#analog-center {
	position: absolute;
	top: 50%;
	left: 50%;
	width: calc(var(--clock-size) * 0.4);
	height: calc(var(--clock-size) * 0.4);
	border-radius: calc(var(--clock-size) * 0.4);
	transform: translate(-50%, -50%);
	background-color: white;
	z-index: 5;
}

#analog-minutes,
#analog-hours,
#analog-seconds {
	transform: rotate(var(--deg));
	position: absolute;
	display: block;
	bottom: 50%;
	left: 50%;
	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2);
	width: calc(var(--clock-size) * 0.2);
	margin-left: calc(var(--clock-size) * -0.1);
	border-radius: calc(var(--clock-size) * 0.2);
	transform-origin: bottom center;
	background-color: white;
	will-change: transform;
}

#analog-hours {
	height: 30%;
}

#analog-minutes {
	height: 45%;
}

#analog-seconds {
	display: none;
	height: 45%;
	opacity: 0.8;
	background-color: red;
	width: calc(var(--clock-size) * 0.1);
	margin-left: calc(var(--clock-size) * -0.05);
}

#analog-face {
	position: absolute;
	width: 100%;
	height: 100%;
	font-size: var(--clock-size);
	--center: calc(50% - 0.5em);
	--padding: 0.75em;
}

#analog-face span {
	position: absolute;
	display: block;
	opacity: 0.6;
	width: 1em;
	height: 1em;
	line-height: 1em;
	text-align: center;
}

#analog-face span:nth-child(1) {
	left: var(--center);
	top: var(--padding);
}

#analog-face span:nth-child(2) {
	top: var(--center);
	right: var(--padding);
}

#analog-face span:nth-child(3) {
	left: var(--center);
	bottom: var(--padding);
}

#analog-face span:nth-child(4) {
	top: var(--center);
	left: var(--padding);
}

#date {
	font-size: 1.5em;
	margin-top: 0.5em;
}

#time.analog #date {
	margin-top: 1em;
}

#time-container.he_hidden ~ #date {
	margin-top: 0;
}

#date-aa-separator::after,
#date-bb-separator::after {
	content: ' ';
}

#date.us #date-aa-separator::after {
	content: ', ';
}

